# pyros

./: .gitignore  Cargo.toml  README.md  install_pyros.sh  package-pyros.py  requirements.txt
src/: README.md  config.rs  lib.rs  mqtt_client.rs  pyros_process.rs
src/main/: pyros.py  pyros_alias.py  pyros_daemon.py  pyros_discover.py  pyros_help.py  pyros_install.py  pyros_log.py  pyros_main.py  pyros_ps.py  pyros_remove.py  pyros_restart.py  pyros_service.py  pyros_shutdown.py  pyros_start.py  pyros_stats.py  pyros_stop.py  pyros_storage.py  pyros_upload.py  pyros_wifi.py
src/main/discovery/: discover.py  discovery_service.py
src/main/local_resources/: __init__.py  local_resources.py
src/main/pyros_common/: __init__.py  install_daemon.py  pyros_common.py  utils.py
src/main/pyros_core/: __init__.py  pyros_core.py
src/resources/linux-service/: pyros.config  pyros.service
src/resources/pyros-code/discovery/: discovery_main.py
src/resources/pyros/discovery/: .process  __init__.py  discovery_main.py  discovery_service.py
src/resources/pyros/pyroslib/: DISCOVERY.py  __init__.py  pyroslib.py
src/resources/pyros/storage_service/: __init__.py
src/rust/: README.md  deamon.rs  mqtt_client.rs
src/test/: test.py  test_discovery.py
