[package]
name = "pyros"
version = "0.1.0"
authors = ["Daniel Sendula <natdan@users.noreply.github.com>"]
edition = "2018"


[[bin]]
name = "pyros-deamon"
test = false
bench = false
path = "src/rust/deamon.rs"


[dependencies]

clap = "2"

tokio = { version = "1", features = ["rt", "macros", "signal", "sync"] }
rumqttc = "0.13.0"
